--- a/symphony-tal-sample/pom.xml
+++ b/symphony-tal-sample/pom.xml
@@ -24,12 +24,7 @@
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>com.avispl.symphony.api</groupId>
-            <artifactId>symphony-api-tal</artifactId>
-            <version>${symphony-tal.version}</version>
-        </dependency>
-        <dependency>
+                <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>${org.slf4j.version}</version>
@@ -44,6 +39,15 @@
             <artifactId>spring-beans</artifactId>
             <version>${org.springframework.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.avispl.symphony.api</groupId>
+            <artifactId>symphony-api-tal</artifactId>
+            <scope>system</scope>
+            <version>4.6.0-SNAPSHOT</version>
+            <systemPath>${basedir}\src\lib\symphony-api-tal-4.6.0-SNAPSHOT.jar</systemPath>
+        </dependency>
+
     </dependencies>
 
     <repositories>
