--- a/symphony-dal-communicator-sample/pom.xml
+++ b/symphony-dal-communicator-sample/pom.xml
@@ -26,21 +26,21 @@
             <artifactId>symphony-api-dal</artifactId>
             <version>4.7.0</version>
             <scope>system</scope>
-            <systemPath>${basedir}/lib/symphony-api-dal-4.7.0-SNAPSHOT.jar</systemPath>
+            <systemPath>${basedir}/lib/symphony-api-dal-4.7.0.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>com.avispl.symphony.dal</groupId>
             <artifactId>symphony-dal-commons</artifactId>
             <version>4.7.0</version>
             <scope>system</scope>
-            <systemPath>${basedir}/lib/symphony-dal-commons-4.7.0-SNAPSHOT.jar</systemPath>
+            <systemPath>${basedir}/lib/symphony-dal-commons-4.7.0.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>com.avispl.symphony.api</groupId>
             <artifactId>symphony-api-commons</artifactId>
             <version>4.7.0</version>
             <scope>system</scope>
-            <systemPath>${basedir}/lib/symphony-api-commons-4.7.0-SNAPSHOT.jar</systemPath>
+            <systemPath>${basedir}/lib/symphony-api-commons-4.7.0.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>org.icmp4j</groupId>
