--- a/symphony-tal-sample/pom.xml
+++ b/symphony-tal-sample/pom.xml
@@ -17,14 +17,13 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <java.version>1.8</java.version>
-        <symphony-tal.version>4.6.0-SNAPSHOT</symphony-tal.version>
+        <symphony-tal.version>4.7.0</symphony-tal.version>
         <org.slf4j.version>1.7.13</org.slf4j.version>
         <commons-lang.version>2.2</commons-lang.version>
-        <org.springframework.version>4.2.4.RELEASE</org.springframework.version>
     </properties>
 
     <dependencies>
-                <dependency>
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>${org.slf4j.version}</version>
@@ -34,46 +33,16 @@
             <artifactId>commons-lang</artifactId>
             <version>${commons-lang.version}</version>
         </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-beans</artifactId>
-            <version>${org.springframework.version}</version>
-        </dependency>
 
+        <!--Local dependency-->
         <dependency>
             <groupId>com.avispl.symphony.api</groupId>
             <artifactId>symphony-api-tal</artifactId>
             <scope>system</scope>
-            <version>4.6.0-SNAPSHOT</version>
-            <systemPath>${basedir}\src\lib\symphony-api-tal-4.6.0-SNAPSHOT.jar</systemPath>
+            <version>${symphony-tal.version}</version>
+            <systemPath>${basedir}\lib\symphony-api-tal-${symphony-tal.version}.jar</systemPath>
         </dependency>
 
     </dependencies>
-
-    <repositories>
-        <repository>
-            <id>avi-spl.releases</id>
-            <url>http://172.31.254.15:8080/nexus/content/repositories/releases</url>
-        </repository>
-        <repository>
-            <id>avi-spl.snapshots</id>
-            <url>http://172.31.254.15:8080/nexus/content/repositories/snapshots</url>
-        </repository>
-        <repository>
-            <id>avi-spl.thirdparty</id>
-            <url>http://172.31.254.15:8080/nexus/content/repositories/thirdparty</url>
-        </repository>
-    </repositories>
-
-    <distributionManagement>
-        <repository>
-            <id>avi-spl.releases</id>
-            <url>http://172.31.254.15:8080/nexus/content/repositories/releases/</url>
-        </repository>
-        <snapshotRepository>
-            <id>avi-spl.snapshots</id>
-            <url>http://172.31.254.15:8080/nexus/content/repositories/snapshots/</url>
-        </snapshotRepository>
-    </distributionManagement>
 
 </project>
